--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>Deputes</groupId>
-    <artifactId>Deputes</artifactId>
+    <groupId>com.oleg</groupId>
+    <artifactId>NationalPoliceEComerceDocumentManageSystem</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-
 
     <dependencies>
         <dependency>
